# PBRT

./: .gitignore  CMakeLists.txt  README.md
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake  tiny-renderer
include/tiny-renderer/camera/: camera.h  pinhole_camera.h
include/tiny-renderer/film/: film.h
include/tiny-renderer/light/: light.h
include/tiny-renderer/math/: geometry.h  matrix.h  normal.h  point.h  ray.h  vector.h
include/tiny-renderer/parser/: parser.h
include/tiny-renderer/primitive/: primitive.h
include/tiny-renderer/scene/: scene.h
include/tiny-renderer/scenes/: scene.h
include/tiny-renderer/shapes/: shape.h  sphere.h
include/tiny-renderer/transforms/: transform.h
scenes/: test.json
src/: main.cpp
src/camera/: camera.cpp  pinhole_camera.cpp
src/film/: film.cpp
src/math/: geometry.cpp
src/parser/: parser.cpp
src/scene/: scene.cpp
src/shapes/: sphere.cpp
