cmake_minimum_required(VERSION 3.20)

project(tiny-renderer
    VERSION 0.1
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(tiny-renderer
    src/main.cpp
)

target_include_directories(tiny-renderer
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_compile_options(tiny-renderer
    PRIVATE
        -Wall
        -Wextra
        -Wpedantic
)
